mongo-k8s-expose-rs/06-sh-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sharded-mongo
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 27017
      name: mongo
      protocol: MONGO
    hosts:
    - "*"
