mongo-k8s-expose-rs/07-sh-istio-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sharded-mongo
spec:
  hosts:
  - "*" # name of internal Mongo service
  gateways:
  - sharded-mongo  # can omit the namespace if gateway is in same
  tcp:
  - match:
    - port: 27017
    route:
    - destination:
        host: sh-expose-demo-mongos.default.svc.cluster.local
        port:
          number: 27017
