mongo-k8s-expose-rs/10-rs-istio-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rs-mongo
spec:
  hosts:
  - "*" # name of internal Mongo service
  gateways:
  - rs-mongo  # can omit the namespace if gateway is in same
  tcp:
  - match:
    - port: 27018
    route:
    - destination:
        host: rs-expose-demo-rs0-0.default.svc.cluster.local
        port:
          number: 27017
  - match:
    - port: 27019
    route:
    - destination:
        host: rs-expose-demo-rs0-1.default.svc.cluster.local
        port:
          number: 27017
  - match:
    - port: 27020
    route:
    - destination:
        host: rs-expose-demo-rs0-2.default.svc.cluster.local
        port:
          number: 27017
